# kakapo

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: example.rs
src/: app.rs  description.rs  events.rs  geom.rs  lib.rs  main.rs  view.rs  view_model.rs
src/renderer/: mod.rs  painter.rs  quad.frag  quad.rs  quad.vert  text.rs
src/widgets/: box_layout.rs  button.rs  mod.rs
