[package]
name = "kakapo"
version = "0.0.1"
description = "A desktop MVVM based GUI framework for Rust, focused on flexibility."
authors = ["Ben Lewis <benlewisj@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/skinny121/kakapo/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
wgpu = "0.6"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
glyph_brush = "0.7.1"
wgpu_glyph = "0.10.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"
